--- a/netlify.toml
+++ b/netlify.toml
@@ -19,7 +19,21 @@ Strict-Transport-Security = "max-age=63072000; includeSubdomains"
 # https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Permissions-Policy (disabled everything except autoplay, local-fonts, screen-wake-lock, speaker-selection)
 # opt out of Federated Learning of Cohorts (aka "FLoC") - https://amifloced.org/
 Permissions-Policy = "interest-cohort=(), accelerometer=(), ambient-light-sensor=(), battery=(), bluetooth=(), browsing-topics=(), camera=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), fullscreen=(), gamepad=(), geolocation=(), gyroscope=(), hid=(), identity-credentials-get=(), idle-detection=(), magnetometer=(), microphone=(), midi=(), otp-credentials=(), payment=(), picture-in-picture=(), publickey-credentials-create=(), publickey-credentials-get=(), serial=(), storage-access=(), sync-xhr=(), usb=(), web-share=(), window-management=(), xr-spatial-tracking=()"
-Content-Security-Policy = "default-src 'none'; frame-ancestors 'none'; object-src 'none'; base-uri 'self'; manifest-src 'self'; worker-src 'self'; form-action 'self'; connect-src 'self' *.hyvor.com ws://*.hyvor.com; script-src 'self' talk.hyvor.com; img-src 'self' data: talk.hyvor.com cdn.cloudflare.com; frame-src 'self' www.youtube-nocookie.com player.vimeo.com streamable.com www.streamable.com; media-src 'self' data: cdn.cloudflare.com www.youtube-nocookie.com player.vimeo.com; font-src 'self' cdn.cloudflare.com cdn.jsdelivr.net fonts.gstatic.com; style-src 'self' talk.hyvor.com cdn.cloudflare.com cdn.jsdelivr.net fonts.googleapis.com;"
+Content-Security-Policy = """default-src 'none'; \
+frame-ancestors 'none'; \
+object-src 'none'; \
+base-uri 'self'; \
+manifest-src 'self'; \
+worker-src 'self'; \
+form-action 'self'; \
+connect-src 'self' blob: data: unpkg.com fonts.googleapi.com api.github.com githubstatus.com www.githubstatus.com *.hyvor.com ws://*.hyvor.com; \
+script-src 'self' unpkg.com talk.hyvor.com; \
+img-src 'self' blob: data: https://*; \
+frame-src 'self' blob: www.youtube-nocookie.com player.vimeo.com streamable.com www.streamable.com; \
+media-src 'self' blob: data: cdn.cloudflare.com www.youtube-nocookie.com player.vimeo.com; \
+font-src 'self' cdn.cloudflare.com cdn.jsdelivr.net fonts.gstatic.com; \
+style-src 'self' 'unsafe-inline' talk.hyvor.com cdn.cloudflare.com cdn.jsdelivr.net fonts.googleapis.com;
+"""
 [[headers]]
 for = "*.js" #javascript
 [headers.values]
@@ -94,5 +108,9 @@ for = "*.woff" #font
 Cache-Control = "public, max-age=604800"
 [[headers]]
 for = "*.woff2" #font
+[headers.values]
+Cache-Control = "public, max-age=604800"
+[[headers]]
+for = "*.json" #config
 [headers.values]
 Cache-Control = "public, max-age=604800"
